Skru på integrasjonstester med maven-failsafe-plugin